fix popup quickreply
This fixes some of the layout issues of the modal popup for quick reply. This has an unknown effect on already working implementations but should be ok.

--- a/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/editor.less
@@ -442,3 +442,19 @@ li.markItUpButton ul {
 .kpoll-time-to-live-input {
 	margin-left: -30px !important;
 }
+
+/*------------------------------------------------------------------
+POPUP LIGHTBOX EDITOR
+-------------------------------------------------------------------- */
+.modal-backdrop, .modal-backdrop.fade.in {
+    position: fixed !important;
+}
+div.modal {
+    width: auto !important;
+    right: auto !important;
+    bottom: auto !important;
+
+}
+.modal-dialog {
+    margin: 0 !important;
+}
